--- a/src/app/application-onboarding/application/application-creation/metric-template/metric-template.component.html
+++ b/src/app/application-onboarding/application/application-creation/metric-template/metric-template.component.html
@@ -329,7 +329,7 @@
                                                 </div>
                                               </td>
                                                <td>
-                                                 <!-- <a href="#" data-toggle="tooltip" data-placement="top" data-original-title="Delete"><i class="fas fa-trash-alt"></i></a> -->
+                                                 <!-- <a href="#" data-toggle="tooltip" data-placement="top" data-original-title="Delete"><i class="far fa-trash-alt"></i></a> -->
                                                </td>
                                              </tr>
                                            </ng-container>
@@ -404,7 +404,7 @@
                                                   </div>
                                                 </td>
                                                 <td>
-                                                  <!-- <a href="#" data-toggle="tooltip" data-placement="top" data-original-title="Delete"><i class="fas fa-trash-alt"></i></a> -->
+                                                  <!-- <a href="#" data-toggle="tooltip" data-placement="top" data-original-title="Delete"><i class="far fa-trash-alt"></i></a> -->
                                                 </td>
                                               </tr>
                                             </ng-container>
@@ -489,7 +489,7 @@
                                                </div>
                                              </td>
                                              <td>
-                                               <a href="#"><i class="fas fa-trash-alt"></i></a>
+                                               <a href="#"><i class="far fa-trash-alt"></i></a>
                                              </td>
                                            </tr>
                                            <tr>
@@ -515,7 +515,7 @@
                                                </div>
                                              </td>
                                              <td>
-                                               <a href="#"><i class="fas fa-trash-alt"></i></a>
+                                               <a href="#"><i class="far fa-trash-alt"></i></a>
                                              </td>
                                            </tr>
                                            <tr>
@@ -541,7 +541,7 @@
                                                </div>
                                              </td>
                                              <td>
-                                               <a href="#"><i class="fas fa-trash-alt"></i></a>
+                                               <a href="#"><i class="far fa-trash-alt"></i></a>
                                              </td>
                                            </tr>
                                            <tr>
@@ -567,7 +567,7 @@
                                                </div>
                                              </td>
                                              <td>
-                                               <a href="#"><i class="fas fa-trash-alt"></i></a>
+                                               <a href="#"><i class="far fa-trash-alt"></i></a>
                                              </td>
                                            </tr>
                                          </table>
@@ -708,7 +708,7 @@
                                   <input type="text" class="form-control" value="" formControlName="metricWeight">
                                 </td>
                                  <td class="px-1">
-                                  <a (click)="deleteQuery(query,i)" class="text-muted"><i class="fas fa-trash-alt"></i></a>
+                                  <a (click)="deleteQuery(query,i)" class="text-muted"><i style="color: red !important;" class="far fa-trash-alt"></i></a>
                                  </td>
                                </tr>
                              </tbody>
