--- a/src/app/application-onboarding/data-source/data-source.component.html
+++ b/src/app/application-onboarding/data-source/data-source.component.html
@@ -52,10 +52,10 @@
                              <td>
                               <span data-toggle="tooltip" data-placement="top" data-original-title="Edit" (click)="onselectDatasource('Edit',datasourceData,i)">
                                 <a  class="text-muted ml-2"  data-toggle="modal" data-target="#dataSource" data-backdrop="static" data-keyboard="false">
-                                  <i class="fas fa-pencil-alt"></i>
+                                  <i style="color:#4797de !important;" class="fas fa-pencil-alt"></i>
                                 </a>
                               </span>
-                              <a (click)="onselectDatasource('Delete',datasourceData,i)" class="text-muted ml-2" data-toggle="tooltip"  data-placement="top" title="Delete"><i class="fas fa-trash-alt"></i></a>
+                              <a (click)="onselectDatasource('Delete',datasourceData,i)" class="text-muted ml-2" data-toggle="tooltip"  data-placement="top" title="Delete"><i style="color: red;" class="far fa-trash-alt"></i></a>
                             </td> 
                           </tr>
                       </tbody>
