--- a/src/app/application-onboarding/application/appliaction-list/appliaction-list.component.html
+++ b/src/app/application-onboarding/application/appliaction-list/appliaction-list.component.html
@@ -55,8 +55,8 @@
                       <td>{{listData.description}}</td>
                       <td>{{listData.email}}</td>
                       <td>
-                        <a  class="text-muted"  data-toggle="tooltip" data-placement="top" title="Edit" (click)="editApplication(listData)"><i class="fas fa-pencil-alt"></i></a>
-                        <a  (click)="appDelete(listData.name,i,listData.applicationId)"  class="text-muted ml-2"  data-toggle="tooltip" data-placement="top" title="Delete"><i class="fas fa-trash-alt"></i></a>
+                        <a  class="text-muted"  data-toggle="tooltip" data-placement="top" title="Edit" (click)="editApplication(listData)"><i style="color:#4797de !important;" class="fas fa-pencil-alt"></i></a>
+                        <a  (click)="appDelete(listData.name,i,listData.applicationId)"  class="text-muted ml-2"  data-toggle="tooltip" data-placement="top" title="Delete" ><i style="color: red;" class="far fa-trash-alt"></i></a>
                       </td>
                     </tr>
                   </tbody>
