--- a/src/app/policy-management/policy-management.component.html
+++ b/src/app/policy-management/policy-management.component.html
@@ -133,12 +133,12 @@
                                                           class="{{editPolicyData.name === tabledata.policyName ? 'active':''}}">
                                                           <a class="text-muted" data-toggle="tooltip"
                                                             data-placement="top" title="Edit"
-                                                            (click)="editPolicy(tabledata.policyName)"><i
+                                                            (click)="editPolicy(tabledata.policyName)"><i style="color:#4797de !important;"
                                                               class="fas fa-pencil-alt"></i></a>
                                                           <a class="text-muted ml-2" data-toggle="tooltip"
                                                             data-placement="top" title="Delete"
-                                                            (click)="deletePolicy(tabledata.policyName,i)"><i
-                                                              class="fas fa-trash-alt"></i></a>
+                                                            (click)="deletePolicy(tabledata.policyName,i)"><i style="color: red;"
+                                                              class="far fa-trash-alt"></i></a>
                                                         </td>
                                                       </tr>
                                                     </tbody>
