--- a/src/app/application-onboarding/application/application-creation/log-template/log-template.component.less
+++ b/src/app/application-onboarding/application/application-creation/log-template/log-template.component.less
@@ -50,3 +50,10 @@ overflow-y:auto;
 {
     margin-left: 10px;
 }
+.stickyTopHeader{
+    vertical-align: bottom;
+    border-bottom: 1px solid #dee2e6;
+    position: sticky;
+    top: -1px;
+    height: 40px;
+}
