--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -57,3 +57,19 @@
     }
 }
 
+.menu-icons {
+    margin-right: 5px;
+    margin-left: 6px;
+    font-size: 14px;
+    opacity: 75%;
+}
+
+.view_in .submenu-icons {
+    margin-right: 0px !important;
+}
+.submenu-icons {
+    font-size: 16px;
+    margin-left: 2px;
+    margin-right: 6px;
+    opacity: 75%;
+}
