--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,24 +6,24 @@
         <div class="menu_toggle" (click)="toggleNavbar()"><i class="fa fa-bars"></i></div>
       </div>
       <div class="sidebar_nav">
-        <ul class="list-unstyled m-0" *ngFor="let SideMenu of Sidebar;" >
-          <li class="{{SideMenu.disabled === true? 'disabled_menu': disabledLink(SideMenu.name)}} {{activeRoutes(SideMenu.link)}}" routerLink="{{SideMenu.link}}"><a><i class="icon {{SideMenu.link}}" matTooltip="{{SideMenu.name}}" [matTooltipDisabled]="hideTooltip == true" [matTooltipPosition]="'right'"></i> <span>{{SideMenu.name }} 
-            <ng-template [ngIf]="SideMenu.name === 'Applications' ?true:false">
+        <ul class="list-unstyled m-0" *ngFor="let SideMenu of Sidebar;let i = index" >
+          <li class="{{SideMenu.disabled === true? 'disabled_menu': disabledLink(SideMenu.name)}} {{activeRoutes(SideMenu.link)}}" (click)="toggleSubMenu(i, SideMenu.link)"><a><i class="{{menuIcons(SideMenu.name) ? menuIcons(SideMenu.name) + ' menu-icons' : SideMenu.link + ' icon'}}" matTooltip="{{SideMenu.name}}" [matTooltipDisabled]="hideTooltip == true" [matTooltipPosition]="'right'"></i> <span>{{SideMenu.name }} 
+            <ng-template [ngIf]="SideMenu.name === 'Continuous Verification' ?true:false">
               <span class="badge badge-primary p-0 popover-hover" data-toggle="tooltip" data-placement="top" title="Num of Applications">{{applicationCount}}</span>
               <span class="badge badge-info p-0 popover-hover" data-toggle="tooltip" data-placement="top" title="Num of Active gates">{{approvalGateInstanceCount}}</span>
             </ng-template>
             </span></a>
           </li>
-            <ng-template [ngIf]="SideMenu.subMenu.length === 0 ?false:true">
+            <div *ngIf="showChildMenu(SideMenu, i)">
               <ul class="subnav list-unstyled m-0" *ngFor = "let submenu of SideMenu.subMenu">
                 <li class="{{submenu.disabled === true? 'disabled_menu': disabledLink(submenu.name)}} {{activeRoutes(submenu.link)}}" routerLink="{{submenu.link}}" (click)="navigateMenu($event,submenu.name)"><a>
-                  <i class="icon {{subMenuclass(submenu.link)}}" matTooltip="{{submenu.name}}" [matTooltipDisabled]="hideTooltip == true" [matTooltipPosition]="'right'" *ngIf="submenu.link != '/application/visibility' && submenu.link != '/application/trendanalysis'"></i> 
+                  <i class="{{menuIcons(submenu.name) ? menuIcons(submenu.name) + ' submenu-icons' : subMenuclass(submenu.link) + ' icon'}}" matTooltip="{{submenu.name}}" [matTooltipDisabled]="hideTooltip == true" [matTooltipPosition]="'right'" *ngIf="submenu.link != '/application/visibility' && submenu.link != '/application/trendanalysis'"></i> 
                   <i class="icon-new fa fa-line-chart" aria-hidden="true" matTooltip="{{submenu.name}}" [matTooltipDisabled]="hideTooltip == true" [matTooltipPosition]="'right'" *ngIf="submenu.link === '/application/trendanalysis'"></i>
                   <i class="icon-new fa fa-eye" aria-hidden="true" matTooltip="{{submenu.name}}" [matTooltipDisabled]="hideTooltip == true" [matTooltipPosition]="'right'" *ngIf="submenu.link === '/application/visibility'"></i>
                   <!-- <i class="{{subMenuclass(submenu.link)}}"></i>  -->
                   <span>{{submenu.name}}</span></a></li>
               </ul>
-            </ng-template>
+            </div>
         </ul>
       </div>
       <a class="sidebar_bottom d-flex align-items-center justify-content-between">
