--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -61,7 +61,7 @@
     margin-right: 5px;
     margin-left: 6px;
     font-size: 14px;
-    opacity: 75%;
+    opacity: 0.8;
 }
 
 .view_in .submenu-icons {
@@ -71,5 +71,5 @@
     font-size: 16px;
     margin-left: 2px;
     margin-right: 6px;
-    opacity: 75%;
+    opacity: 0.8;
 }
