--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -73,3 +73,14 @@
     margin-right: 6px;
     // opacity: 0.8;
 }
+.menu-header {
+    border-bottom: 1px solid rgb(61 77 92);
+}
+.menu-header > li > a {
+    border-bottom: none;
+}
+.menu-header > li {
+    background: rgba(0, 0, 0, 0.1);
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
