--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,18 +6,24 @@
         <div class="menu_toggle" (click)="toggleNavbar()"><i class="fa fa-bars"></i></div>
       </div>
       <div class="sidebar_nav">
-        <ul class="list-unstyled m-0" *ngFor="let SideMenu of Sidebar;let i = index" >
-          <li class="{{SideMenu.disabled === true? 'disabled_menu': disabledLink(SideMenu.name)}} {{activeRoutes(SideMenu.link)}}" (click)="toggleSubMenu(i, SideMenu.link)">
+        <ul class="list-unstyled m-0 menu-header" *ngFor="let SideMenu of Sidebar;let i = index" >
+          <li class="{{SideMenu.disabled === true? 'disabled_menu': disabledLink(SideMenu.name)}} {{activeRoutes(SideMenu.link)}} {{parentLinkName == SideMenu.name && !showChildMenu(SideMenu, i) ? 'active' : ''}}" (click)="toggleSubMenu(i, SideMenu.link)">
             <a>
               <i class="{{SideMenu.link + ' icon'}}" matTooltip="{{SideMenu.name}}" [matTooltipDisabled]="hideTooltip == true" [matTooltipPosition]="'right'" *ngIf="!menuIcons(SideMenu.name)"></i> 
               <fa-icon class="menu-icons" [icon]="menuIcons(SideMenu.name)" matTooltip="{{SideMenu.name}}" [matTooltipDisabled]="hideTooltip == true" [matTooltipPosition]="'right'" *ngIf="menuIcons(SideMenu.name)"></fa-icon>
               <span>{{SideMenu.name }} </span>
+              <span class="float-right" *ngIf="SideMenu.subMenu.length > 0">
+                <i class="fas fa-caret-up" matTooltip="Collapse {{SideMenu.name}}" [matTooltipPosition]="'right'" *ngIf="showChildMenu(SideMenu, i)"></i>
+                <i class="fas fa-caret-down" matTooltip="Expand {{SideMenu.name}}" [matTooltipPosition]="'right'" *ngIf="!showChildMenu(SideMenu, i)"></i>
+                <!-- <fa-icon class="" [icon]="upArrow"></fa-icon>
+                <fa-icon class="" [icon]="downArrow"></fa-icon> -->
+              </span>
             </a>
           </li>
             <div *ngIf="showChildMenu(SideMenu, i)">
               <ul class="subnav list-unstyled m-0" *ngFor = "let submenu of SideMenu.subMenu">
-                <li class="{{submenu.disabled === true? 'disabled_menu': disabledLink(submenu.name)}} {{activeRoutes(submenu.link)}}" routerLink="{{submenu.link}}" (click)="navigateMenu($event,submenu.name)"><a>
-                  <i class="{{subMenuclass(submenu.link) + ' icon'}}" matTooltip="{{submenu.name}}" [matTooltipDisabled]="hideTooltip == true" [matTooltipPosition]="'right'" *ngIf="!menuIcons(submenu.name) && submenu.link != '/application/visibility' && submenu.link != '/application/trendanalysis'"></i> 
+                <li class="{{submenu.disabled === true? 'disabled_menu': disabledLink(submenu.name)}} {{activeRoutes(submenu.link, SideMenu.name)}}" routerLink="{{submenu.link}}" (click)="navigateMenu($event,submenu.name)"><a>
+                  <i class="{{subMenuclass(submenu.link) + ' icon'}}" title="{{submenu.link}}"  *ngIf="!menuIcons(submenu.name) && submenu.link != '/application/visibility' && submenu.link != '/application/trendanalysis'"></i> 
                   <fa-icon class="submenu-icons" [icon]="menuIcons(submenu.name)" matTooltip="{{submenu.name}}" [matTooltipDisabled]="hideTooltip == true" [matTooltipPosition]="'right'" *ngIf="menuIcons(submenu.name) && submenu.link != '/application/visibility' && submenu.link != '/application/trendanalysis'"></fa-icon>
                   <i class="icon-new fa fa-line-chart" aria-hidden="true" matTooltip="{{submenu.name}}" [matTooltipDisabled]="hideTooltip == true" [matTooltipPosition]="'right'" *ngIf="submenu.link === '/application/trendanalysis'"></i>
                   <i class="icon-new fa fa-eye" aria-hidden="true" matTooltip="{{submenu.name}}" [matTooltipDisabled]="hideTooltip == true" [matTooltipPosition]="'right'" *ngIf="submenu.link === '/application/visibility'"></i>
