--- a/src/styles.less
+++ b/src/styles.less
@@ -511,7 +511,7 @@ span{
 	position: absolute;
 	bottom: 0px;
 	height: 1px;
-	background: #789;
+	// background: #789;
 	content: "";
 	left: 25px;
 	right: 15px;
@@ -524,8 +524,9 @@ span{
 	font-size: 14px;
 	font-weight: 400;
 	text-decoration: none;
-	padding: 5px 15px 5px 25px;
+	padding: 5px 15px 5px 10px;
 	border-left: 2px transparent solid;
+	border-bottom: 1px solid rgb(61 77 92);
 }
 
 /* Disable Selection Highlighting */
