--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -40,7 +40,7 @@
       </div>
       <a class="sidebar_bottom d-flex align-items-center justify-content-between">
         <span>Help</span>
-        <i class="fa fa-angle-down"></i>
+        <i class="fas fa-caret-down"></i>
       </a>
     </div>
     <div class=" {{isAuthenticate == true ? 'content_section' : 'col-md-12 col-sm-12 col-lg-12 col-xs-12'}}">
