Solved issues with the tag assignment in the cluster

--- a/src/app/application-onboarding/application/application-creation/log-template/log-template.component.html
+++ b/src/app/application-onboarding/application/application-creation/log-template/log-template.component.html
@@ -360,7 +360,7 @@
                                 <tr>
                                   <th>Cluster Tag String</th>
                                   <th>Cluster Tag</th>
-                                  <th class="text-right"><a (click)="addNewClusterTag()" data-toggle="tooltip" data-placement="top" data-original-title="Add New Log Cluster"><i class="fas fa-plus"></i></a></th>
+                                  <th class="text-right"><a (click)="addNewCluster()" data-toggle="tooltip" data-placement="top" data-original-title="Add New Log Cluster"><i class="fas fa-plus"></i></a></th>
 
                                 </tr>
                               </thead>
@@ -381,7 +381,7 @@
                                     <a (click)="deleteClusterTag(clusterTags,i)" class="text-muted"><i style="color: red !important;" class="far fa-trash-alt"></i></a>
                                   </td>
                                   <td *ngIf="isLast" width="20" class="text-right">
-                                    <a (click)="addNewClusterTag()" data-toggle="tooltip" data-placement="top" data-original-title="Add New Log Cluster"><i class="fas fa-plus"></i></a>
+                                    <a (click)="addNewCluster()" data-toggle="tooltip" data-placement="top" data-original-title="Add New Log Cluster"><i class="fas fa-plus"></i></a>
                                    </td>
                                   </ng-container>
                                 </tr>
